--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "mongoose": "^5.9.14",
     "nunjucks": "^3.2.1",
     "validator": "^13.0.0"
