--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 	"homepage": "https://github.com/draguve/fuzzy-octo-pancake#readme",
 	"dependencies": {
 		"body-parser": "^1.19.0",
+		"connect-mongo": "^3.2.0",
 		"express": "^4.17.1",
 		"express-session": "^1.17.1",
 		"mongoose": "^5.9.14",
