--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"connect-mongo": "^3.2.0",
 		"express": "^4.17.1",
 		"express-session": "^1.17.1",
+		"express-validator": "^6.5.0",
 		"mongoose": "^5.9.14",
 		"nunjucks": "^3.2.1",
 		"validator": "^13.0.0"
