--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"express": "^4.17.1",
 		"express-session": "^1.17.1",
 		"express-validator": "^6.5.0",
+		"gravatar": "^1.8.0",
 		"mongoose": "^5.9.14",
 		"nunjucks": "^3.2.1",
 		"validator": "^13.0.0"
