Errors and logging

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"express-validator": "^6.5.0",
 		"gravatar": "^1.8.0",
 		"mongoose": "^5.9.14",
+		"morgan": "^1.10.0",
 		"nunjucks": "^3.2.1",
 		"validator": "^13.0.0"
 	}
