--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"mongoose": "^5.9.14",
 		"morgan": "^1.10.0",
 		"nunjucks": "^3.2.1",
+		"openvidu-node-client": "^2.14.0",
 		"validator": "^13.0.0"
 	}
 }
