--- a/.env
+++ b/.env
@@ -1,5 +1,9 @@
 PORT=443
 MONGO=localhost:27017
+
 OPENVIDU_URL=https://192.168.1.17:4443
 OPENVIDU_SECRET=pioneer123
 SESSION_SECRET=pioneer123
+
+ELASTIC_HOST=localhost
+ELASTIC_PORT=9200
