--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"express-session": "^1.17.1",
 		"express-validator": "^6.5.0",
 		"gravatar": "^1.8.0",
+		"mongoosastic": "^4.6.0",
 		"mongoose": "^5.9.14",
 		"morgan": "^1.10.0",
 		"n-readlines": "^1.0.0",
