--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"body-parser": "^1.19.0",
 		"connect-mongo": "^3.2.0",
 		"dotenv": "^8.2.0",
+		"elasticsearch": "^16.7.1",
 		"express": "^4.17.1",
 		"express-session": "^1.17.1",
 		"express-validator": "^6.5.0",
