--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 	},
 	"homepage": "https://github.com/draguve/fuzzy-octo-pancake#readme",
 	"dependencies": {
+		"agenda": "^3.1.0",
 		"bluebird": "^3.7.2",
 		"body-parser": "^1.19.0",
 		"connect-mongo": "^3.2.0",
