--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT=443
 MONGO=localhost:27017
 
-OPENVIDU_URL=https://192.168.1.17:4443
+OPENVIDU_URL=https://localhost:4443
 OPENVIDU_SECRET=pioneer123
 SESSION_SECRET=pioneer123
 
