--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"n-readlines": "^1.0.0",
 		"nunjucks": "^3.2.1",
 		"openvidu-node-client": "^2.14.0",
+		"request": "^2.88.2",
 		"spacetime": "^6.6.0",
 		"validator": "^13.0.0"
 	}
