Will now send emails from MAILGUN

--- a/.env
+++ b/.env
@@ -9,3 +9,9 @@ ELASTIC_HOST=localhost
 ELASTIC_PORT=9200
 
 GMAPS_API=AIzaSyBuByTw9-fvhI5NbMzGb_uFWrxGZsGZdlc
+
+MAILGUN_ACTIVE_API_KEY=a457aae356cb8f09a7d61849e17b472f-ffefc4e4-1e7c620f
+MAILGUN_DOMAIN=sandbox7043b0e93bff4322a13dd982c3ed143f.mailgun.org
+
+#put public ip of the server here
+PULBIC_IP=127.0.0.1
