--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
 		"express": "^4.17.1",
 		"express-session": "^1.17.1",
 		"express-validator": "^6.5.0",
-		"gravatar": "^1.8.0",
+		"gravatar": "^1.8.1",
 		"mongoosastic": "^4.6.0",
 		"mongoose": "^5.9.14",
 		"morgan": "^1.10.0",
 		"n-readlines": "^1.0.0",
+		"nodemailer": "^6.4.10",
+		"nodemailer-mailgun-transport": "^2.0.0",
 		"nunjucks": "^3.2.1",
 		"openvidu-node-client": "^2.14.0",
 		"request": "^2.88.2",
