Added ability to upload and save files to server for customer history

--- a/.gitignore
+++ b/.gitignore
@@ -125,4 +125,5 @@ temp/
 # Ignore all local history of files
 .history
 
+Uploads/*
 # End of https://www.gitignore.io/api/node,code,visualstudiocode
