--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"mongoosastic": "^4.6.0",
 		"mongoose": "^5.9.14",
 		"morgan": "^1.10.0",
+		"multer": "^1.4.2",
 		"n-readlines": "^1.0.0",
 		"nodemailer": "^6.4.10",
 		"nodemailer-mailgun-transport": "^2.0.0",
