Init lang system added,customer history text bug fix

--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
 		"express-session": "^1.17.1",
 		"express-validator": "^6.5.0",
 		"gravatar": "^1.8.1",
+		"i18next": "^19.6.3",
+		"i18next-fs-backend": "^1.0.7",
+		"i18next-http-middleware": "^3.0.2",
 		"mongoosastic": "^4.6.0",
 		"mongoose": "^5.9.14",
 		"morgan": "^1.10.0",
