--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,93 @@
-version: "2"
-services:
-  mongo:
-    container_name: mongo
-    image: mongo
-    volumes:
-      - './data/mongo:/data/db'
-    ports:
-      - "27017:27017"
+# ------------------------------------------------------------------------------
+#
+#    DO NOT MODIFY THIS FILE !!!
+#
+#    Configuration properties should be specified in .env file
+#
+#    Application based on OpenVidu should be specified in
+#    docker-compose.override.yml file
+#
+#    This docker-compose file coordinates all services of OpenVidu CE Platform.
+#
+#    This file will be overridden when update OpenVidu Platform
+#
+#    Openvidu Version: 2.15.0
+#
+#    Installation Mode: On Premises
+#
+# ------------------------------------------------------------------------------
 
-  elastic:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.7.1
-    container_name: elastic
-    environment:
-      - discovery.type=single-node
-    volumes:
-      - './data/elastic:/usr/share/elasticsearch/data'
-    ports:
-      - '9200:9200'
-      - '9300:9300'
-#  openvidu:
-#    image: openvidu/openvidu-server-kms:2.15.0
-#    container_name: openvidu
-#    environment:
-#      - DOMAIN_OR_PUBLIC_IP=127.0.0.1
-#      - OPENVIDU_SECRET=pioneer123
-#      - CERTIFICATE_TYPE=owncert
-#    ports:
-#      - '4443:4443'
-#    extra_hosts:
-#      - www.draguve.wtf:127.0.0.1
+version: '3.1'
+
+services:
+
+    openvidu-server:
+        image: openvidu/openvidu-server:2.15.0
+        restart: on-failure
+        network_mode: host
+        entrypoint: ['/bin/bash', '-c', 'export COTURN_IP=`/usr/local/bin/discover_my_public_ip.sh`; /usr/local/bin/entrypoint.sh']
+        volumes:
+            - /var/run/docker.sock:/var/run/docker.sock
+            - ${OPENVIDU_RECORDING_PATH}:${OPENVIDU_RECORDING_PATH}
+            - ${OPENVIDU_RECORDING_CUSTOM_LAYOUT}:${OPENVIDU_RECORDING_CUSTOM_LAYOUT}
+            - ${OPENVIDU_CDR_PATH}:${OPENVIDU_CDR_PATH}
+        env_file:
+            - .env
+        environment:
+            - SERVER_SSL_ENABLED=false
+            - SERVER_PORT=5443
+            - KMS_URIS=["ws://localhost:8888/kurento"]
+            - COTURN_REDIS_IP=127.0.0.1
+            - COTURN_REDIS_PASSWORD=${OPENVIDU_SECRET}
+
+    kms:
+        image: ${KMS_IMAGE:-kurento/kurento-media-server:6.14.0}
+        restart: always
+        network_mode: host
+        ulimits:
+          core: -1
+        volumes:
+            - /opt/openvidu/kms-crashes:/opt/openvidu/kms-crashes
+            - ${OPENVIDU_RECORDING_PATH}:${OPENVIDU_RECORDING_PATH}
+        environment:
+            - KMS_MIN_PORT=40000
+            - KMS_MAX_PORT=57000
+            - GST_DEBUG=${KMS_DEBUG_LEVEL:-}
+
+    redis:
+        image: openvidu/openvidu-redis:1.0.0
+        restart: always
+        network_mode: host
+        environment:
+            - REDIS_PASSWORD=${OPENVIDU_SECRET}
+
+    coturn:
+        image: openvidu/openvidu-coturn:1.0.0
+        restart: on-failure
+        network_mode: host
+        environment:
+            - REDIS_IP=127.0.0.1
+            - TURN_LISTEN_PORT=3478
+            - DB_NAME=0
+            - DB_PASSWORD=${OPENVIDU_SECRET}
+            - MIN_PORT=57001
+            - MAX_PORT=65535
+
+    nginx:
+        image: openvidu/openvidu-proxy:3.0.0
+        restart: on-failure
+        network_mode: host
+        volumes:
+            - ./certificates:/etc/letsencrypt
+            - ./Certificates:/owncert
+            - ${OPENVIDU_RECORDING_CUSTOM_LAYOUT}:/opt/openvidu/custom-layout
+        environment:
+            - DOMAIN_OR_PUBLIC_IP=${DOMAIN_OR_PUBLIC_IP}
+            - CERTIFICATE_TYPE=${CERTIFICATE_TYPE}
+            - LETSENCRYPT_EMAIL=${LETSENCRYPT_EMAIL}
+            - PROXY_HTTP_PORT=${HTTP_PORT:-}
+            - PROXY_HTTPS_PORT=${HTTPS_PORT:-}
+            - ALLOWED_ACCESS_TO_DASHBOARD=${ALLOWED_ACCESS_TO_DASHBOARD:-}
+            - ALLOWED_ACCESS_TO_RESTAPI=${ALLOWED_ACCESS_TO_RESTAPI:-}
+            - PROXY_MODE=CE
+            - WITH_APP=true
