--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ version: '3.1'
 services:
 
     openvidu-server:
+        container_name: openvidu-server
         image: openvidu/openvidu-server:2.15.0
         restart: on-failure
         network_mode: host
@@ -41,6 +42,7 @@ services:
             - COTURN_REDIS_PASSWORD=${OPENVIDU_SECRET}
 
     kms:
+        container_name: kurento
         image: ${KMS_IMAGE:-kurento/kurento-media-server:6.14.0}
         restart: always
         network_mode: host
@@ -55,6 +57,7 @@ services:
             - GST_DEBUG=${KMS_DEBUG_LEVEL:-}
 
     redis:
+        container_name: redis
         image: openvidu/openvidu-redis:1.0.0
         restart: always
         network_mode: host
@@ -62,6 +65,7 @@ services:
             - REDIS_PASSWORD=${OPENVIDU_SECRET}
 
     coturn:
+        container_name: coturn
         image: openvidu/openvidu-coturn:1.0.0
         restart: on-failure
         network_mode: host
@@ -74,6 +78,7 @@ services:
             - MAX_PORT=65535
 
     nginx:
+        container_name: nginx
         image: openvidu/openvidu-proxy:3.0.0
         restart: on-failure
         network_mode: host
