--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
 #Our Server Configs
 PORT=443
-MONGO=www.draguve.wtf:27017
+MONGO=localhost:27017
 
-OPENVIDU_URL=https://www.draguve.wtf:4443
+OPENVIDU_URL=https://127.0.0.1:4443
 #OPENVIDU_SECRET=pioneer123
 SESSION_SECRET=pioneer123
 
-ELASTIC_HOST=www.draguve.wtf
+ELASTIC_HOST=localhost
 ELASTIC_PORT=9200
 
 GMAPS_API=AIzaSyBuByTw9-fvhI5NbMzGb_uFWrxGZsGZdlc
